# distributed-ai-agent-complete

./: .env.example  CONTINUITY_SYSTEM_README.md  CORRECTED_PROJECT_UNDERSTANDING.md  CRITICAL_BLIND_SPOTS.md  DEEP_RESEARCH_ANALYSIS.md  GITHUB_VERIFICATION.md  HELIOS_DEPLOYMENT.md  ITERATION_4_DESIGN.md  JUST_TALK_PROJECT_ANALYSIS.md  OPTIMAL_PATH_DESIGN.md  PRODUCTION_AGENT_V2.md  PROTECTION_SYSTEM.md  QUICKSTART.md  README.md  RESEARCH_FINDINGS.md  STANDALONE_DEPLOYMENT_GUIDE.md  STANDALONE_README.md  SYSTEM_SUMMARY.md  cleanup_helios_for_ai.ps1  deploy.sh  docker-compose.yml  knowledge_graph.json  restore_helios_settings.ps1  run_just_talk_complete.py  run_just_talk_completion.py  run_standalone_agent.py  standalone_config.example.json  standalone_config.json  test_continuity_system.py  test_iteration4_continuity.py  test_single_task.py  test_task1_iteration3.py
.protection/: checksums.json  protected_files.json
context_storage/: 54a0eb15502b23b8.json  b73da22a3b01e713.json
docs/: AUTONOMOUS_AGENT_COMPLETION_STRATEGY.md  AUTONOMOUS_AGENT_GUIDE.md  PRODUCTION_CHECKLIST.md  PURPOSEFUL_LIVE_COACHING_COMPLETE_ECOSYSTEM_ANALYSIS.md  TESTING_GUIDE.md  UBUNTU_INSTALLATION_GUIDE.md
frontend/: autonomous_mode.html  index.html  (+1 more)
lenovo/: DEPLOYMENT_GUIDE.md  Dockerfile  INVENTORY.md  README.md  docker-compose.yml  pyproject.toml
lenovo/agent_ops/: __init__.py  api.py  config.py  db.py  models.py  queue.py  runner.py  worker.py
lenovo/scripts/: ubuntu_server_setup.sh  windows_server_setup.ps1  windows_set_static_ip.ps1
lenovo/tests/: __init__.py  test_api.py
(+160 files in other folders)
